--- a/src/main/resources/static/styles/team/listTeam.css
+++ b/src/main/resources/static/styles/team/listTeam.css
@@ -196,9 +196,15 @@ ul.roundsList {
 }
 
 .inputFilter {
-    width: 100%;
     font-size: 20px;
     line-height: 1;
+    width: 460px;
+    height: 48px;
+    border-radius: 4px;
+    border: 0;
+    background-color: #F8FAFC;
+    padding: 10px;
+    box-shadow: 0 0 7px #c4c4c4;
 }
 .inputFilter:focus, textarea:focus, select:focus{
     outline: none;
